--- a/app/src/main/res/layout/fragment_fragment1.xml
+++ b/app/src/main/res/layout/fragment_fragment1.xml
@@ -27,13 +27,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rectangle_drawable"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/rectangle_drawable"
                 android:layout_weight="1"
+                android:textColor="#FFFFFF"
                 android:text="健康檢查小幫手"
                 android:textSize="35dp" />
 
@@ -44,50 +47,14 @@
                 android:layout_weight="0.27"
                 android:drawableRight="@drawable/ic_create_black_24dp"
                 android:text="計算"
-                android:textSize="25dp" />
+                android:textSize="25sp" />
 
         </LinearLayout>
 
-        <LinearLayout
+        <ListView
+            android:id="@+id/listview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="BMI:" />
-
-            <TextView
-                android:id="@+id/bmi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:layout_weight="1" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="每日基礎代謝:" />
-
-            <TextView
-                android:id="@+id/base"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:layout_weight="1" />
-        </LinearLayout>
+            android:layout_height="247dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -95,24 +62,19 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="靜態能量消耗值:" />
+                android:textSize="30sp"
+                android:text="推薦訓練部位:" />
 
             <TextView
-                android:id="@+id/rre"
+                android:id="@+id/sportwhere"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="20sp" />
+                android:textSize="30sp" />
         </LinearLayout>
-
-        <ListView
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="228dp" />
 
     </LinearLayout>
 
